--- a/shell.html
+++ b/shell.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="icon" href="img/favicon.png">
     <meta charset="utf-8">
-    <title>Will - Terapias manuais, integrativas, massoterapia e Pilates</title>
+    <title>Will - Massoterapia, terapias manuais, integrativas e Pilates</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -157,7 +157,7 @@
                     <a href="/" class="navbar-brand">
                         <img alt="" src="img/ff1.png" class="img-fluid w-100 lfooter mb-3">
                     </a>
-                    <p>Tratamento com seriedade, individualidade e dedicação para o seu bem-estar. <br>Experimente nossas terapias e descubra os benefícios para relaxamento e saúde.</p>
+                    <p>Tratamento personalizado com seriedade e dedicação para o seu bem-estar. <br>Experimente nossas terapias e descubra os benefícios para relaxamento e saúde.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Santo André, SP</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>011 974237159</p>
                     <p><i class="fa fa-envelope mr-2"></i>contato@drwill.com.br</p>
