--- a/tree.html
+++ b/tree.html
@@ -10,7 +10,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will - Terapias manuais, integrativas, massoterapia e Pilates</title>
+    <title>Will - Massoterapia, terapias manuais, integrativas e Pilates</title>
     <meta name="description" content="List all your links on one website.">
     <meta property="og:title" content="links-website" />
     <meta property="og:description" content="List all your links on one website." />
@@ -30,7 +30,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       </div>
       <div class="header_text flex_column_center">
         <h1 class="header_h_item">William Otavio Souto</h1>
-        <h2 class="header_h_item">Terapias Manuais, Integrativas, massoterapia e Pilates</h2>
+        <h2 class="header_h_item">Massoterapia, terapias manuais, integrativas e Pilates</h2>
       </div>
     <!-- Logo, Title and Description Codes End -->  
 
