--- a/preco.html
+++ b/preco.html
@@ -173,10 +173,10 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-3 pb-lg-0 text-center">
-                    <img class="img-fluid w-100" src="img/f2.png" alt="">
+                    <img class="img-fluid w-100" src="img/f2.png" alt="" style="width: auto !important;max-height: 200px;">
                 </div>
                 <div class="col-lg-5">
-                    <h4 class="mb-4">Terapia mista - Massagem Terapêutica Unificada - Técnica/terapia unificada - Programa reestaurativo</h4>
+                    <h4 class="mb-4">Terapia unificada</h4>
                     <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$130,00<br><strong>Dinâmica:</strong> Terapia individualizada onde abrange todas as técnicas e recursos do terapeuta, sendo aplicadas de acordo com os objetivos, preferências e necessidades do cliente.<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Terapia%20unificada." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
