--- a/tree.html
+++ b/tree.html
@@ -28,7 +28,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <div class="header_img flex_column_center pb-3">
         <img src="img/treef.jpg" alt="Logo" />
       </div>
-      <div class="header_text flex_column_center">
+      <div class="header_text flex_column_center treemtxt">
         <h1 class="header_h_item">William Otavio Souto</h1>
         <h2 class="header_h_item">Massoterapia, terapias manuais, integrativas e Pilates</h2>
       </div>
@@ -121,7 +121,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>Terapias manuais e integrativas, de acordo com suas preferências e necessidades, dedicadas ao seu bem-estar.<br>Terapia unificada, Massagem Sueca(clássica), Liberação miofascial(Deep Tissue), Drenagem linfática, massagem relaxante, pedras quentes, ventosaterapia, Liberação miofascial(Conceito ROLF), auriculoterapia e Pilates.</p>
+          <p>Terapias manuais e integrativas, de acordo com suas preferências e necessidades, dedicadas ao seu bem-estar.<br>Terapia unificada, Massagem Sueca(clássica), Liberação miofascial(Deep Tissue), Drenagem linfática, Massagem Relaxante, Massagem com pedras quentes, Ventosaterapia, Liberação miofascial(Conceito ROLF), Auriculoterapia e Pilates.</p>
         </div>
         <!-- Menu Small Item 
         <div class="main_small_button_list">
