--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 <img src="img/hayanna.jpg" style=" max-height: 150px; ">
             </div>
         </div>
-        <div class="owl-carousel serviced-carousel nonloop">
+        <div class="owl-carousel serviced-carousel">
             
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/venthan.jpg" alt="">
