--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Drenagem Linfática</h3>
-                            <p class="mx-md-5 px-5">Terapia suave e precisa estimula o sistema linfático, eliminando toxinas, excesso de líquido, reduzindo o inchaço, melhorando a circulação e promover uma sensação de leveza e bem-estar</p>
+                            <p class="mx-md-5 px-5">Terapia suave e precisa estimula o sistema linfático, eliminando toxinas, excesso de líquido, reduzindo o inchaço, melhorando a circulação e promover uma sensação de leveza e bem-estar.</p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Drenagem%20linf%C3%A1tica." target="_blank">Agendar</a>                            <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#dl" >Saiba mais</a>
 
                             
