--- a/servicos.html
+++ b/servicos.html
@@ -173,7 +173,7 @@
                     <img class="img-fluid w-100 tuiconp" src="img/f2.png" alt="">
                 </div>
                 <div class="col-lg-9">
-                    <h1 class="mb-4">Terapia mista - Massagem Terapêutica Unificada - Técnica/terapia unificada - Programa reestaurativo</h1>
+                    <h1 class="mb-4">Terapia unificada</h1>
                     <div class="pl-4 border-left border-primary">Especialmente desenvolvida para atender às suas necessidades individuais e proporcionar uma experiência única de reencontro com o equilíbrio e o bem-estar. Como massoterapeuta, compreendo a importância de abordar os diversos aspectos do seu bem-estar físico e mental. Cada indivíduo é único e, por isso, merece um tratamento exclusivo, adaptado às suas demandas específicas.
                        <p>Com base na avaliação, em seus objetivos e preferências um plano personalizado será criado, e dentre todas as técnicas e recursos disponíveis, serão selecionandas os mais adequados onde trabalharão em sinergia para buscar o resultado que você almeja.</p>
                        <p>Esse serviço abrangente e personalizado é dedicado a elevar sua qualidade de vida e promover um estado geral de saúde e bem-estar. </p>
