--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                             </ul>
                              <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Unidade - Espaço Hayanna</h6>
                             <ul class="list-inline">
-                                <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 19:00 - 22:00</li>
+                                <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Seg – Sexta: 19:00 - 21:00</li>
                                 <li class="h6 py-1"><i class="far fa-circle text-primary clock1"></i>Sabado, domingo e feriados: 08:00 - 18:00</li>
                             </ul>
                             <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." class="btn btn-primary mt-2">Agendar</a>
@@ -582,7 +582,7 @@
                         </ul>
                          <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Unidade - Espaço Hayanna</h6>
                         <ul class="list-inline">
-                            <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Seg – Sexta: 19:00 - 22:00</li>
+                            <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Seg – Sexta: 19:00 - 21:00</li>
                             <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Sabado: 07:00 - 22:00</li>
                             <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Domingo: 09:00 - 18:00</li>
                         </ul>
@@ -792,7 +792,7 @@
                                 <a class="text-white-50 mb-2" href="/"><i class="fa fa-angle-right mr-2"></i>Home</a>
                                 <a class="text-white-50 mb-2" href="sobre"><i class="fa fa-angle-right mr-2"></i>Sobre</a>
                                 <a class="text-white-50 mb-2" href="precos"><i class="fa fa-angle-right mr-2"></i>Preços</a>
-                                 <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Contato</a> <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Endereços</a>
+                                 <a class="text-white-50 mb-2" href="contato"><i class="fa fa-angle-right mr-2"></i>Contato</a> <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Endereços</a>
                             </div>
                         </div>
                         <div class="col-sm-6 mb-5">
