--- a/servicos.html
+++ b/servicos.html
@@ -50,15 +50,16 @@
                         <i class="fab fa-youtube"></i>
                     </a>
                     -->
+                    <a class="text-primary px-2" href="https://www.instagram.com/drwillsouto/" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
                     <a class="text-primary px-2" href="https://twitter.com/drwillsouto" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a> 
                     <a class="text-primary px-2" href="https://www.linkedin.com/in/willsouto/" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a class="text-primary px-2" href="https://www.instagram.com/drwillsouto/" target="_blank">
-                        <i class="fab fa-instagram"></i>
-                    </a>
+                    
                     
                 </div>
             </div>
@@ -386,7 +387,7 @@
                                 <a class="text-white-50 mb-2" href="sobre"><i class="fa fa-angle-right mr-2"></i>Sobre</a>
                                 <a class="text-white-50 mb-2" href="servicos"><i class="fa fa-angle-right mr-2"></i>Serviços</a>
                                 <a class="text-white-50 mb-2" href="precos"><i class="fa fa-angle-right mr-2"></i>Preços</a>
-                                 <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Contato</a> <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Endereços</a>
+                                 <a class="text-white-50 mb-2" href="contato"><i class="fa fa-angle-right mr-2"></i>Contato</a> <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Endereços</a>
                             </div>
                         </div>
                         <div class="col-sm-6 mb-5">
