--- a/tree.html
+++ b/tree.html
@@ -122,7 +122,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>Terapia unificada, Massagem Sueca(clássica), Liberação miofascial(Deep Tissue), Drenagem linfática, Massagem Relaxante, Massagem com pedras quentes, Ventosaterapia, Liberação miofascial(Conceito ROLF), Auriculoterapia e Pilates.</p>
+          <p>Terapia unificada, Massagem Sueca(Clássica), Liberação miofascial(Deep Tissue), Drenagem linfática, Massagem Relaxante, Massagem com pedras quentes, Ventosaterapia, Liberação miofascial(Conceito ROLF), Auriculoterapia e Pilates.</p>
         </div>
         <!-- Menu Small Item 
         <div class="main_small_button_list">
