--- a/sobre.html
+++ b/sobre.html
@@ -633,7 +633,7 @@ Graduação em Análise e Desenvolvimento de Sistemas. <br class="clear">- Facul
                                 <a class="text-white-50 mb-2" href="/"><i class="fa fa-angle-right mr-2"></i>Home</a>
                                 <a class="text-white-50 mb-2" href="sobre"><i class="fa fa-angle-right mr-2"></i>Sobre</a>
                                 <a class="text-white-50 mb-2" href="servicos"><i class="fa fa-angle-right mr-2"></i>Serviços</a>
-                                <a class="text-white-50 mb-2" href="precos"><i class="fa fa-angle-right mr-2"></i>Preços</a>
+                                <a class="text-white-50 mb-2" href="preco"><i class="fa fa-angle-right mr-2"></i>Preços</a>
                                  <a class="text-white-50 mb-2" href="contato"><i class="fa fa-angle-right mr-2"></i>Contato</a> <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Endereços</a>
                             </div>
                         </div>
