--- a/tree.html
+++ b/tree.html
@@ -83,7 +83,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           </a>
             
         </div>
-          <div class="header_svg_item">
+          <!--<div class="header_svg_item">
           <a href="mailto:contato@drwill.com.br">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="45" height="45" viewBox="0 0 256 256" xml:space="preserve">
 
@@ -96,7 +96,7 @@ https://github.com/ardacarofficial/links-website is open source project.
 </g>
 </svg>
           </a>
-        </div>
+        </div>-->
           <div class="header_svg_item">
           <a href="https://twitter.com/drwillsouto" target="_blank" rel="nofollow">
             <svg enable-background="new 0 0 24 24" viewBox="0 0 24 24">
