--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 </div>
                 <div class="col-lg-8">
                     <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
-                    <p class="pl-4 border-left border-primary">Nossas terapias são baseadas na sua necessidade.<br>Estamos prontos para escutar seus objetivos, preocupações e preferências, para assim pode criar sessões sob medida para lhe promover bem-estar físico e mental.<br>Nossas técnicas nos permitem promover relaxamento e melhora do sono, redução de dores musculares, crônicas e de cabeça, redução de stress e tensões, auxílio no tratamento de determinadas doenças, ajuda na recuperação esportiva e de lesões, redução de inchaços, melhora da circulação e mais...<br>Estamos aqui para ajudar a alcançar seus objetivos de saúde e bem-estar.</p>
+                    <p class="pl-4 border-left border-primary">Nossas terapias são baseadas na sua necessidade.<br>Estamos prontos para escutar seus objetivos, preocupações e preferências, para assim pode criar sessões sob medida para lhe proporcionar bem-estar físico e mental.<br>Nossas técnicas nos permitem promover relaxamento e melhora do sono, redução de dores musculares, crônicas e de cabeça, redução de stress e tensões, auxílio no tratamento de determinadas doenças, ajuda na recuperação esportiva e de lesões, redução de inchaços, melhora da circulação e mais...<br>Estamos aqui para ajudar a alcançar seus objetivos de saúde e bem-estar.</p>
                     <div class="row pt-3">
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
