--- a/preco.html
+++ b/preco.html
@@ -178,7 +178,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Terapia unificada</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong> 50 min - R$130,00<br>70 min - R$150,00<br>90 min - R$170,00<br><strong>Dinâmica:</strong> Terapia personalizada onde abrange todas as técnicas e recursos disponíveis ao terapeuta, sendo aplicadas de acordo com os objetivos, preferências e necessidades do cliente.<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Terapia%20unificada." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong> <br>50 min - R$130,00<br>70 min - R$150,00<br>90 min - R$170,00<br><strong>Dinâmica:</strong> Terapia personalizada onde abrange todas as técnicas e recursos disponíveis ao terapeuta, sendo aplicadas de acordo com os objetivos, preferências e necessidades do cliente.<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Terapia%20unificada." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
