--- a/preco.html
+++ b/preco.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <title>Will - Massoterapia, terapias manuais, integrativas e Pilates</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    
+   <meta content="Stress? Dor? Cansaço? Tensão? Ansiedade? Venha aproveitar os benefícios da massagem, estamos preparados para lhe atender de acordo com suas preferências e necessidades..." name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
