--- a/sobre.html
+++ b/sobre.html
@@ -7,7 +7,7 @@
     <title>Will - Massoterapia, terapias manuais, integrativas e Pilates</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     
-   <meta content="Stress? Dor? Cansaço? Tensão? Ansiedade? Venha aproveitar os benefícios da massagem, estamos preparados para lhe atender de acordo com suas preferências e necessidades..." name="description">
+   <meta content="Stress? Dor? Cansaço? Tensão? Ansiedade? Venha aproveitar os benefícios das nossas terapias, estamos preparados para lhe atender de acordo com suas preferências e necessidades..." name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h1 class="mb-4">William Otavio Souto</h1>
-                    <span class="pl-4 border-left border-primary d-block"><p> Graduando em fisioterapia no último semestre(Centro Universitário FMABC)</p><p>Graduado em análise e desenvolvimento de sistemas(FAM).</p><p>É estagiário de fisioterapia no Instituto Fisiologic e no Hospital Estadual Mário Covas(HEMC), atuou como estagiário de massoterapia na Escola Bergqvist e de fisioterapia no Centro de Reabilitação e Equoterapia Coração Valente. </p><p>É formado em diversas técnicas de massoterapia pela Escola Bergqvist Massage & Friskvårdutbildningar, a Escola Bergqvist possui 40 anos de experiência como a melhor e mais tradicional escola de massagem da Suécia e no Brasil, e é líder em pesquisas científicas na Suécia sobre os efeitos da massagem. </p><p>Cursou "Avaliação e Intervenção do sistema fascial - Conceito ROLF", ministrado pela Maria Eugenia Ortiz(Gegê), fisioterapeuta da seleção brasileira masculina de ginástica artística.</p> <p>Outras formações descritas abaixo na página.</p>
+                    <span class="pl-4 border-left border-primary d-block"><p> Graduando em fisioterapia no último semestre(Centro Universitário FMABC)</p><p>Graduado em análise e desenvolvimento de sistemas(FAM).</p><p>É estagiário de fisioterapia no Instituto Fisiologic e no Hospital Estadual Mário Covas(HEMC), atuou como estagiário de massoterapia na Escola Bergqvist e de fisioterapia no Centro de Reabilitação e Equoterapia Coração Valente. </p><p>É formado em diversas técnicas de massoterapia pela Escola Bergqvist Massage & Friskvårdutbildningar, a Escola Bergqvist possui 40 anos de experiência como a melhor e mais tradicional escola de massagem da Suécia e no Brasil, e é líder em pesquisas científicas na Suécia sobre os efeitos das nossas terapias. </p><p>Cursou "Avaliação e Intervenção do sistema fascial - Conceito ROLF", ministrado pela Maria Eugenia Ortiz(Gegê), fisioterapeuta da seleção brasileira masculina de ginástica artística.</p> <p>Outras formações descritas abaixo na página.</p>
                        
                     </span>
                        </div>
