--- a/servicos.html
+++ b/servicos.html
@@ -171,7 +171,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100 tuiconp" src="img/f2.png" alt="">
+                    <img class="img-fluid  tuiconp" src="img/f2.png" alt="">
                 </div>
                 <div class="col-lg-9">
                     <h1 class="mb-4">Terapia unificada</h1>
