--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="icon" href="img/favicon.png">
     <meta charset="utf-8">
-    <title>Will - Massoterapia, terapias manuais, integrativas e Pilates</title>
+    <title>Dr. Will - Fisioterapia, massoterapia, treinamento funcional e Pilates</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     
    <meta content="Stress? Dor? Cansaço? Tensão? Ansiedade? Venha aproveitar os benefícios das nossas terapias, estamos preparados para lhe atender de acordo com suas preferências e necessidades..." name="description">
@@ -148,12 +148,27 @@
     <div class="container-fluid py-5">
         <div class="container pt-5">
             <div class="row align-items-center">
+                <div class="col-lg-12 pb-5 pb-lg-0">
+                   <h1 class="mb-4 text-center">William Otavio Souto</h1>
+                </div>
                 <div class="col-lg-6 pb-5 pb-lg-0">
                     <img class="img-fluid w-100" title="William Otavio Souto" src="img/wq1.jpg" alt="William Otavio Souto">
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="mb-4">William Otavio Souto</h1>
-                    <span class="pl-4 border-left border-primary d-block"><p> Graduando em fisioterapia no último semestre(Centro Universitário FMABC)</p><p>Graduado em análise e desenvolvimento de sistemas(FAM).</p><p>É estagiário de fisioterapia no Instituto Fisiologic e no Hospital Estadual Mário Covas(HEMC), atuou como estagiário de massoterapia na Escola Bergqvist e de fisioterapia no Centro de Reabilitação e Equoterapia Coração Valente. </p><p>É formado em diversas técnicas de massoterapia pela Escola Bergqvist Massage & Friskvårdutbildningar, a Escola Bergqvist possui 40 anos de experiência como a melhor e mais tradicional escola de massagem da Suécia e no Brasil, e é líder em pesquisas científicas na Suécia sobre os efeitos das nossas terapias. </p><p>Cursou "Avaliação e Intervenção do sistema fascial - Conceito ROLF", ministrado pela Maria Eugenia Ortiz(Gegê), fisioterapeuta da seleção brasileira masculina de ginástica artística.</p> <p>Outras formações descritas abaixo na página.</p>
+                    <span class="pl-4 border-left border-primary d-block"><p>Graduado em Fisioterapia pelo Centro Universitário FMABC.<br>
+Pós-graduando em Especilização em dor pelo Fisio em Ortopedia.<br>
+Pós-graduando em Acupuntura pela EBRAMEC.
+<br><br>
+É fisioterapeuta no Instituto Fisiologic e massoterapeuta atendendo em diversas localidades, atuou como estagiário de massoterapia na Escola Bergqvist e de fisioterapia no Centro de Reabilitação e Equoterapia Coração Valente(ARCV), Hospital Estadual Mario Covas(HEMC), Santa Casa de Santo André(CHMSA) e na UPA Perimetral.<br>
+Foi pesquisador analisando correlações entre parâmetros de controle postural e marcha em indivíduos com Doença de Parkinson.
+<br><br>
+É formado em diversas técnicas de massoterapia pela Escola Bergqvist Massage & Friskvårdutbildningar, a Escola Bergqvist possui 40 anos de experiência como a melhor e mais tradicional escola de massagem da Suécia e no Brasil, e é líder em pesquisas científicas na Suécia sobre os efeitos das nossas terapias.
+<br><br>
+Tem formação internacional em atendimento de emergência STOP THE BLEED pela AMERICAN COLLEGE OF SURGEONS COMMITTEE ON TRAUMA, estando apto a realizar avaliações e intervenções não invasivas em situações de urgência/emergência, com o princípio de manter ou restabelecer as funções vitais da vítima até a chegada dos cuidados definitivos.
+<br><br>
+Possui diversas formações e cursos no âmbito de fisioterapia como formação de Pilates pelo Grupo Voll, Dry needling e técnicas avançadas de agulhamento no tratamento da dor, Conceito Rolf, Sleep Coach, Treinamento Keiser, etc.
+<br><br>
+Outras formações descritas no <a href="https://lattes.cnpq.br/2388059456660725" target="_blank"> currículo lattes: clique aqui.</a></p>
                        
                     </span>
                        </div>
@@ -613,7 +628,7 @@ Graduação em Análise e Desenvolvimento de Sistemas. <br class="clear">- Facul
                     <a href="/" class="navbar-brand">
                         <img alt="" src="img/ff1.png" class="img-fluid w-100 lfooter mb-3">
                     </a>
-                    <p>Tratamento personalizado com seriedade e dedicação para o seu bem-estar. <br>Experimente nossas terapias e descubra os benefícios para o seu relaxamento e saúde.</p>
+                    <p>Tratamento personalizado com seriedade e dedicação.<br>Experimente nossos serviços e descubra os benefícios para a sua saúde e bem-estar.<p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Santo André, SP</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>011 974237159</p>
                     <p><i class="fa fa-envelope mr-2"></i>contato@drwill.com.br</p>
