--- a/tree.html
+++ b/tree.html
@@ -10,7 +10,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will - Massoterapia, terapias manuais, integrativas e Pilates</title>
+    <title>Dr. Will - Fisioterapia, massoterapia, treinamento funcional e Pilates</title>
     <meta name="description" content="List all your links on one website.">
     <meta property="og:title" content="links-website" />
     <meta property="og:description" content="List all your links on one website." />
@@ -122,7 +122,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>Terapia unificada, Massagem Sueca(Clássica), Liberação miofascial(Deep Tissue), Drenagem linfática, Massagem Relaxante, Massagem com pedras quentes, Ventosaterapia, Liberação miofascial(Conceito ROLF), Auriculoterapia e Pilates.</p>
+          <p>Fisioterapia, tratamento da dor, treinamento funcional, Massagem Sueca(Clássica), Liberação miofascial(Deep Tissue), Drenagem linfática, Massagem Relaxante, Massagem com pedras quentes, Ventosaterapia, Liberação miofascial(Conceito ROLF), auriculoterapia e Pilates.</p>
         </div>
         <!-- Menu Small Item 
         <div class="main_small_button_list">
